# yolov8-rknn

./: Cargo.toml  README.md  run.sh
src/: cv.rs  cv_seg.rs  lib.rs  main.rs  post_process.rs  save_image.rs  seg.rs  test_speed.rs  yolov8seg.rs
