[package]
name = "yolov8-rknn"
version = "0.2.0"
edition = "2021"
authors = ["LuJing <lujing.bio@qq.com>", "NessajCN <ksnessaj@hotmail.com>"]
repository = "https://github.com/lujing-jlu/yolov8-rknn"

# 添加多个 bin
[[bin]]
name = "rkod"
path = "src/main.rs"

[[bin]]
name = "test_speed"
path = "src/test_speed.rs"

[[bin]]
name = "save_image"
path = "src/save_image.rs"

[[bin]]
name = "yolov8seg"
path = "src/yolov8seg.rs"

[dependencies]
rayon = "1.10.0"
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ffmpeg-the-third = { version = "2.0.1+ffmpeg-7.0" }
#, features = [
# # "rk",
# ], git = "https://github.com/lujing-jlu/ffmpeg-the-third-rk" }
image = "0.25"
libc = "0.2"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "time",
    "chrono",
] }
imageproc = "0.25.0"
rusttype = "0.9.3"
ab_glyph = "0.2.28"

# [build-dependencies]
# cc = "1.0"
# bindgen = "0.65"
